--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -272,7 +272,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
                   - type: custom:button-card
                     icon: mdi:lightbulb-on
                     aspect_ratio: 1/1
@@ -293,7 +293,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
                   - type: custom:button-card
                     icon: mdi:aurora
                     aspect_ratio: 1/1
@@ -314,7 +314,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
                   - type: custom:button-card
                     icon: mdi:wave
                     aspect_ratio: 1/1
@@ -335,7 +335,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
               - type: custom:button-card
                 name: Ceiling Light
                 icon: hue:pendant-round
@@ -442,7 +442,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
                   - type: custom:button-card
                     icon: mdi:lightbulb-on
                     aspect_ratio: 1/1
@@ -463,7 +463,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
             columns: 2
           - type: custom:button-card
             name: All Lights
@@ -525,7 +525,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: '#accc7d'
+                        - background-color: var(--green-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -540,7 +540,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: ' #dfe2e8'
+                        - background-color: var(--light-gray-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -600,7 +600,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: '#accc7d'
+                        - background-color: var(--green-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -615,7 +615,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: ' #dfe2e8'
+                        - background-color: var(--light-gray-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -683,7 +683,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #e3817a '
+                        - background-color: var(--red-alt)
                 styles:
                   card:
                     - border-radius: 24px
@@ -695,7 +695,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #dfe2e8 '
+                    - background-color: var(--light-gray-alt)
               - type: custom:button-card
                 icon: mdi:television
                 aspect_ratio: 1/1
@@ -717,7 +717,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #accc7d '
+                        - background-color: var(--green-alt)
                 styles:
                   card:
                     - border-radius: 24px
@@ -729,7 +729,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #dfe2e8 '
+                    - background-color: var(--light-gray-alt)
               - type: custom:button-card
                 icon: mdi:television-guide
                 aspect_ratio: 1/1
@@ -751,7 +751,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #accc7d '
+                        - background-color: var(--green-alt)
                 styles:
                   card:
                     - border-radius: 24px
@@ -763,7 +763,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #dfe2e8 '
+                    - background-color: var(--light-gray-alt)
               - type: custom:button-card
                 icon: mdi:nintendo-switch
                 aspect_ratio: 1/1
@@ -785,7 +785,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #accc7d '
+                        - background-color: var(--green-alt)
                 styles:
                   card:
                     - border-radius: 24px
@@ -797,7 +797,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #dfe2e8 '
+                    - background-color: var(--light-gray-alt)
             columns: 4
           - type: custom:button-card
             name: Remote
@@ -1181,7 +1181,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
               - type: custom:button-card
                 icon: mdi:lightbulb-on
                 aspect_ratio: 1/1
@@ -1202,7 +1202,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
               - type: custom:button-card
                 icon: mdi:aurora
                 aspect_ratio: 1/1
@@ -1223,7 +1223,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
               - type: custom:button-card
                 icon: mdi:wave
                 aspect_ratio: 1/1
@@ -1244,7 +1244,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
         columns: 2
       - square: false
         type: grid
@@ -1355,7 +1355,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
               - type: custom:button-card
                 icon: mdi:lightbulb-on
                 aspect_ratio: 1/1
@@ -1376,7 +1376,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
         columns: 2
       - type: vertical-stack
         cards:
@@ -1489,7 +1489,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
                   - type: custom:button-card
                     icon: mdi:lightbulb-on
                     aspect_ratio: 1/1
@@ -1510,7 +1510,7 @@ views:
                         - width: 75px
                         - height: 75px
                         - top: 0
-                        - background-color: ' #efe6a2 '
+                        - background-color: var(--yellow-alt)
             columns: 2
       - square: false
         type: grid
@@ -1621,7 +1621,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
               - type: custom:button-card
                 icon: mdi:lightbulb-on
                 aspect_ratio: 1/1
@@ -1642,7 +1642,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
         columns: 2
       - square: false
         type: grid
@@ -1753,7 +1753,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
               - type: custom:button-card
                 icon: mdi:lightbulb-on
                 aspect_ratio: 1/1
@@ -1774,7 +1774,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
         columns: 2
       - square: false
         type: grid
@@ -1885,7 +1885,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
               - type: custom:button-card
                 icon: mdi:lightbulb-on
                 aspect_ratio: 1/1
@@ -1906,7 +1906,7 @@ views:
                     - width: 75px
                     - height: 75px
                     - top: 0
-                    - background-color: ' #efe6a2 '
+                    - background-color: var(--yellow-alt)
         columns: 2
       - square: false
         type: grid
@@ -2097,7 +2097,7 @@ views:
                     - width: 50px
                     - height: 50px
                     - top: 5px
-                    - background-color: '#e3c26b'
+                    - background-color: var(--yellow-alt)
                   icon:
                     - width: 35px
                     - height: 35px
@@ -2112,7 +2112,7 @@ views:
                     - width: 50px
                     - height: 50px
                     - top: 5px
-                    - background-color: ' #dfe2e8'
+                    - background-color: var(--light-gray-alt)
                   icon:
                     - width: 35px
                     - height: 35px
@@ -2185,7 +2185,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: '#accc7d'
+                        - background-color: var(--green-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -2200,7 +2200,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: ' #dfe2e8'
+                        - background-color: var(--light-gray-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -2260,7 +2260,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: '#accc7d'
+                        - background-color: var(--green-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -2275,7 +2275,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: ' #dfe2e8'
+                        - background-color: var(--light-gray-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -2335,7 +2335,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: '#accc7d'
+                        - background-color: var(--green-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -2350,7 +2350,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: ' #dfe2e8'
+                        - background-color: var(--light-gray-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -2410,7 +2410,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: '#accc7d'
+                        - background-color: var(--green-alt)
                       icon:
                         - width: 35px
                         - height: 35px
@@ -2425,7 +2425,7 @@ views:
                         - width: 50px
                         - height: 50px
                         - top: 5px
-                        - background-color: ' #dfe2e8'
+                        - background-color: var(--light-gray-alt)
                       icon:
                         - width: 35px
                         - height: 35px
