--- a/cards/full-light-grid-card.yaml
+++ b/cards/full-light-grid-card.yaml
@@ -121,7 +121,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #efe6a2 '
+            - background-color: var(--yellow-alt)
       - type: custom:button-card
         icon: mdi:lightbulb-on
         aspect_ratio: 1/1
@@ -142,7 +142,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #efe6a2 '
+            - background-color: var(--yellow-alt)
       - type: custom:button-card
         icon: mdi:aurora
         aspect_ratio: 1/1
@@ -163,7 +163,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #efe6a2 '
+            - background-color: var(--yellow-alt)
       - type: custom:button-card
         icon: mdi:wave
         aspect_ratio: 1/1
@@ -184,7 +184,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #efe6a2 '
+            - background-color: var(--yellow-alt)
   - type: custom:button-card
     name: Ceiling Light
     icon: hue:pendant-round
@@ -291,7 +291,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #efe6a2 '
+            - background-color: var(--yellow-alt)
       - type: custom:button-card
         icon: mdi:lightbulb-on
         aspect_ratio: 1/1
@@ -312,5 +312,5 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #efe6a2 '
+            - background-color: var(--yellow-alt)
 columns: 2
