--- a/cards/full-media-activity-button-grid-card.yaml
+++ b/cards/full-media-activity-button-grid-card.yaml
@@ -22,7 +22,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #e3817a '
+            - background-color: var(--red-alt)
     styles:
       card:
         - border-radius: 24px
@@ -34,7 +34,7 @@ cards:
         - width: 75px
         - height: 75px
         - top: 0
-        - background-color: ' #dfe2e8 '
+        - background-color: var(--light-gray-alt)
   - type: custom:button-card
     icon: mdi:television
     aspect_ratio: 1/1
@@ -56,7 +56,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #accc7d '
+            - background-color: var(--green-alt)
     styles:
       card:
         - border-radius: 24px
@@ -68,7 +68,7 @@ cards:
         - width: 75px
         - height: 75px
         - top: 0
-        - background-color: ' #dfe2e8 '
+        - background-color: var(--light-gray-alt)
   - type: custom:button-card
     icon: mdi:television-guide
     aspect_ratio: 1/1
@@ -90,7 +90,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #accc7d '
+            - background-color: var(--green-alt)
     styles:
       card:
         - border-radius: 24px
@@ -102,7 +102,7 @@ cards:
         - width: 75px
         - height: 75px
         - top: 0
-        - background-color: ' #dfe2e8 '
+        - background-color: var(--light-gray-alt)
   - type: custom:button-card
     icon: mdi:nintendo-switch
     aspect_ratio: 1/1
@@ -124,7 +124,7 @@ cards:
             - width: 75px
             - height: 75px
             - top: 0
-            - background-color: ' #accc7d '
+            - background-color: var(--green-alt)
     styles:
       card:
         - border-radius: 24px
@@ -136,5 +136,5 @@ cards:
         - width: 75px
         - height: 75px
         - top: 0
-        - background-color: ' #dfe2e8 '
+        - background-color: var(--light-gray-alt)
 columns: 4
