--- a/cards/media-activity-off-button.yaml
+++ b/cards/media-activity-off-button.yaml
@@ -19,7 +19,7 @@ state:
         - width: 75px
         - height: 75px
         - top: 0
-        - background-color: ' #e3817a '
+        - background-color: var(--red-alt)
 styles:
   card:
     - border-radius: 24px
@@ -31,4 +31,4 @@ styles:
     - width: 75px
     - height: 75px
     - top: 0
-    - background-color: ' #dfe2e8 '
+    - background-color: var(--light-gray-alt)
